update about page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,6 +4,7 @@ layout: default
 ---
 <div class="container my-4 about-contents">
 {{ content }}
+My Grandfather’s collection of over 450+ Black Magazines including NegroWorld, Freedomways, Ebony Magazine, Jet Magazine, and Essence Magazine.
 </div>
 
 {% if page.credits == true %}{% include cb/credits.html %}{% endif %}
